--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,20 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.0</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-spring -->
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-spring</artifactId>
+			<version>5.14.5</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jms -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>4.3.10.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
