--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
 			<version>5.1.3.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -143,6 +148,21 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-spring -->
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-spring</artifactId>
+			<version>5.14.5</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jms -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>4.3.10.RELEASE</version>
+		</dependency>
+		
 
 	</dependencies>
 
