--- a/pom.xml
+++ b/pom.xml
@@ -162,8 +162,20 @@
 			<artifactId>spring-jms</artifactId>
 			<version>4.3.10.RELEASE</version>
 		</dependency>
-		
+        
+		 <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>flying-saucer-pdf</artifactId>
+            <version>9.1.4</version>
+        </dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
